--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -232,7 +232,8 @@ telescopes.
  
 \subsection{s\_resolution}
 \label{sec:res}
-
+In the case of single dish this is the beam size inferred from the wavelength and diameter. 
+In the case of interferometry, a typical value for the spatial resolution will be given by $\lambda / L$ where $\lambda$ 
 is the mid value of the spectral range and L is the longest distance in the \emph{uv} plane.
 
 \subsection{s\_region}
