Further revision of Sect. 2.1

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -152,14 +152,15 @@ Spatial resolution in the SD case is intended as the beam size. This holds true 
 
 Contrary to what usually happens for  interferometric observations, in the case of INAF radio telescopes a SD observation (scan) contains only one scientific target. In any case, each target in an observation is listed as a separate entry in an ObsCore Table sharing the same obs\_id.
 
-Complex frequency setups are possible in the same observation, as already mentioned in Sect. \ref{sec:specificities}. For instance, new multi-band receivers acquire simultaneously different frequency bands with different setups (bandwidth, max/min frequency, etc.). Moreover, modern digital backends allow the simultaneous acquisition of more than one spectral window (each with its spectral resolution) inside each receiver band. Such a complex observation should be properly represented in an ObsCore Table.
-As an example: the new tri-band K-Q-W receiver being installed on board of the INAF radio telescopes observes simultaneously the K, Q and W frequency bands in the same observations. It can be coupled with a digital backend delivering {\it n} different spectral windows for each of the three observed bands. In this example, if the highest-granularity approach to ObsCore is applied, such a case would be described with $3n$ entries in a ``flat'' ObsCore Table. In case of broadband spectro-polarimetric observations, like the simultaneous study of many emission lines, $n$ may become large. Thus, such numerous ObsCore entries associated to the same dataset might make it difficult for a user to understand the observing setup. The possibility to adopt different levels of granularity in an ObsCore Table might be considered.
+Complex frequency setups are possible in the same observation, as already mentioned in Sect. \ref{sec:specificities}.
+%For instance, new multi-band receivers acquire simultaneously different frequency bands with different setups (bandwidth, max/min frequency, etc.). Moreover, modern digital backends allow the simultaneous acquisition of more than one spectral window (each with its spectral resolution) inside each receiver band. Such a complex observation should be properly represented in an ObsCore Table.
+%As an example: the new tri-band K-Q-W receiver being installed on board of the INAF radio telescopes observes simultaneously the K, Q and W frequency bands in the same observations. It can be coupled with a digital backend delivering {\it n} different spectral windows for each of the three observed bands. In this example, if the highest-granularity approach to ObsCore is applied, such a case would be described with $3n$ entries in a ``flat'' ObsCore Table. In case of broadband spectro-polarimetric observations, like the simultaneous study of many emission lines, $n$ may become large. Thus, such numerous ObsCore entries associated to the same dataset might make it difficult for a user to understand the observing setup. The possibility to adopt different levels of granularity in an ObsCore Table might be considered.
 
 The ObsCore definition of t\_resolution as the minimal interpretable interval between two points along the
 time axis (being it an average or representative value) is generally not applicable for SD data. Typically time is not an independent variable in SD measurements, it can be saved together with spatial/spectral/intensity information as a timestamp associated to each data sample.
 Even in the case of on-source tracking, time information in SD data is not intended for time domain studies.
 
-Finally, also in the SD case we note that currently allowed terms for dataproduct\_type do not permit a proper data characterisation. A revision of the reserved list of terms for dataproduct\_type is currently under discussion within IVOA.
+%Finally, also in the SD case we note that currently allowed terms for dataproduct\_type do not permit a proper data characterisation. A revision of the reserved list of terms for dataproduct\_type is currently under discussion within IVOA.
 
 
 
