Adding ADQL use case appendix to main branch

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -488,8 +488,7 @@ In the registry, the Obscore table and the Extended table MUST be described in t
 
 \appendix
 
-\section{ADQL Use cases}
-\label{ADQLusecases}
+\input{Appendix.tex}
 
 
 \bibliography{ivoatex/ivoabib,ivoatex/docrepo}
